# tg-term

./: CMakeLists.txt  LICENSE  README.md  important.txt  main.c
include/: tg-client.h  tg-loop.h
source/: tg-client.c  tg-loop.c
